<resources>
    <string name="app_name">Euphoria</string>
    <string name="search">Поиск</string>
    <string name="profile">Профиль</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="forward_messages">[Пересланные сообщения]</string>
    <string name="online">В сети</string>
    <string name="load_old">ЗАГРУЗИТЬ ЕЩЕ</string>
    <string name="delete_message">Удалить сообщения</string>
    <string name="add">Добавить</string>
    <string name="owner_of_chat">создатель беседы</string>
    <string name="invited_by">"пригласил(а) "</string>
    <string name="gift">[Подарок]</string>
    <string name="chat">" (Беседа) "</string>
    <string name="type_group">Группа</string>
    <string name="type_page">Публичная страница</string>
    <string name="type_event">Сообщество</string>
    <string name="offline">Оффлайн</string>
    <string name="all">"Всего сообщений: "</string>
    <string name="incoming">"Полученные: "</string>
    <string name="outgoing">"Отправленные: "</string>
    <string name="already_in_group">Вы уже состоите в группе</string>
    <string name="thank_you">Спасибо!</string>
    <string name="sending">Отправка..</string>
    <string name="error">Ошибка!</string>
    <string name="check_update">Проверить обновление</string>
    <string name="download_dialog">Скачать диалог</string>
    <string name="download_dialog_with">Скачивание диалога</string>
    <string name="started_download_dialog">Начато скачивание диалога</string>
    <string name="enter">Введите</string>
    <string name="login">Вход</string>
    <string name="login_description">Введите id и токен пользователя. Можно ввести как порядковый номер страници (12345678), так и короткий id пользователя начиная со знака "@" (@durov) </string>
    <string name="download_ask">Скачать?</string>
    <string name="you">Я</string>
    <string name="authorization_successfully">Авторизовались успешно… Пожалуйста подождите…</string>
    <string name="login_with_token">Вход с access token</string>
    <string name="no_updates">У вас последняя версия приложения</string>
    <string name="write_message">Сообщение…</string>
    <string name="download_history_successful">download history successful</string>
    <string name="new_messages">новых сообщений</string>
    <string name="is_typing">Набирает текст…</string>
    <string name="translate_text.please_wait">Переводим текст. Это займет несколько секунд…</string>
    <string name="all_words">"Всего слов: "</string>
    <string name="wallpaper_change">Поменять фон</string>
    <string name="wallpaper_remove">Удалить фон</string>
    <string name="exit_message">Нажмите еще раз для выхода</string>
    <string name="delete">Удалить</string>
    <string name="statistics_messages">Статистика сообщений</string>
    <string name="materials_from_talk">Материалы беседы</string>
    <string name="set_wallpaper">Фон сообщений</string>
    <string name="show_and_hide_time">Показать/скрыть время</string>
    <string name="translate_all">Перевести все</string>
    <string name="update">Обновить</string>
    <string name="news">Новости</string>
    <string name="friends">Друзья</string>
    <string name="messages">Сообщения</string>
    <string name="audios">Аудиозаписи</string>
    <string name="gifts">Подарки</string>
    <string name="videos">Видео</string>
    <string name="groups">Группы</string>
    <string name="docs">Документы</string>
    <string name="notes">Заметки</string>
    <string name="prefs">Настройки</string>
    <string name="exit_for_account">Выход из аккаунта</string>
    <string name="delete_dialog">Удалить диалог</string>
    <string name="delete_doc">Удалить документ</string>
    <string name="load_saved_dialog">Загрузить сохраненный диалог</string>
    <string name="exit_for_account_description">Вы уверены, что хотите выйти из аккаунта?</string>
    <string name="creating_chat">Создание чата</string>
    <string name="error_decrypting">Произошла ошибка декодирование</string>
    <string name="message_copied">Скопировано</string>
    <string name="translator">Яндекс Переводчик</string>
    <string name="translation_text">Перевод текста, Пожалуйста, подождите…</string>
    <string name="important_messages">Важные сообщения</string>
    <string name="action_settings">Settings</string>
    <string name="chat_name">Название чата</string>
    <string name="attach">Прикрепить</string>
    <string name="dialogs_number">"всего диалогов: "</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="exit">Выход</string>
    <string name="members">участников</string>
    <string name="title_members">Участники беседы</string>
    <string name="authorization">Авторизация</string>
    <string name="themes">Тема</string>
    <string name="colour">Цветовая гамма</string>
    <string name="check_internet">Пожалуйста, проверьте Ваше подключение к интернету</string>
    <string name="others">Прочее</string>
    <string name="about">О приложении</string>
    <string name="prefs_night_theme">Ночной режим</string>
    <string name="prefs_night_theme_description">Ночная тема</string>
    <string name="prefs_app_color">Цветовая схема</string>
    <string name="prefs_app_color_description">Цвет, используемый в приложении</string>
    <string name="prefs_color_in_msg">Цвет принятых сообщений</string>
    <string name="prefs_color_in_msg_description">Перекрашивать фон пузырька в цвет темы</string>
    <string name="prefs_color_out_msg">Цвет отправленных сообщений</string>
    <string name="prefs_color_out_msg_description">Перекрашивать фон пузырька в цвет темы</string>
    <string name="prefs_offline">Оффлайн</string>
    <string name="prefs_offline_description">Вас не будет видно в сети</string>
    <string name="prefs_hide_typing">Скрывать статус тайпинга</string>
    <string name="prefs_hide_typing_description">Не отображать собеседникам, что вы набирайте сообщение a.k.a скрыть «Пользователь набирает сообщение…»</string>
    <string name="prefs_about">О приложение</string>
    <string name="prefs_version">Версия</string>
    <string name="prefs_changelog">Список изменений</string>
    <string name="prefs_changelog_description">Нажмите, чтобы посмотреть</string>
    <string name="prefs_title_ui">Оформление</string>
    <string name="prefs_blur_header">Размытый аватар</string>
    <string name="prefs_blur_header_description">Показывать размытую фотография пользователя в дравере (Боковой шторки), вместо
        фона темы
    </string>
    <string name="prefs_select_locale">Выбор языка</string>
    <string name="prefs_select_locale_description">Использовать выбранный вами язык, не зависимо от настройки
        системы
    </string>
    <string name="sort_by_unread">Сортировать по непрочитанным</string>
</resources>