<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res/ru.euphoriadev.vk">


    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>


    <item
        android:id="@+id/action_important"
        android:icon="@drawable/ic_star_white"
        android:title="@string/important_messages"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sort_by_unread"
        android:title="@string/sort_by_unread"
        app:showAsAction="never"/>

</menu>